# autofix

./: .gitignore  CLAUDE.md  Makefile  README.md  compose.yml  pyproject.toml
.docker/cw/: Dockerfile  credentials.dist  cwagent-config.json  entrypoint.sh
src/: app.py  cli.py  settings.py
src/commands/: __init__.py  log.py
src/env/local/: .env.dist
src/lib/: logger.py
src/modules/ai/: agent_factory.py  bedrock_model.py
src/modules/logs/: __init__.py  main.py  models.py  promps.py  time_parser.py  tools.py
tests/: conftest.py  test_main_utils.py  test_models.py  test_time_parser.py
